--- a/_test_outcome.Rmd
+++ b/_test_outcome.Rmd
@@ -9,7 +9,7 @@ editor_options:
 ###### Model Summary
 ```{r}
 m1_covariates_only <- update(m2_birthorder_linear, formula = . ~ . - birth_order)
-summary(m1_covariates_only)
+tidy(m1_covariates_only, conf.int = T)
 ```
 
 ###### Coefficient Plot {.active}
@@ -21,7 +21,7 @@ plot(allEffects(m1_covariates_only))
 
 ###### Model Summary
 ```{r}
-summary(m2_birthorder_linear)
+tidy(m2_birthorder_linear, conf.int = T)
 ```
 
 ###### Coefficient Plot {.active}
@@ -34,7 +34,7 @@ plot_birthorder(m2_birthorder_linear, separate = FALSE, ylimits = ylimits)
 ###### Model Summary
 ```{r}
 m3_birthorder_nonlinear = update(m1_covariates_only, formula = . ~ . + birth_order_nonlinear)
-summary(m3_birthorder_nonlinear)
+tidy(m3_birthorder_nonlinear, conf.int = T)
 ```
 
 ###### Coefficient Plot {.active}
@@ -47,7 +47,7 @@ plot_birthorder(m3_birthorder_nonlinear, separate = FALSE, ylimits = ylimits)
 ###### Model Summary
 ```{r}
 m4_interaction = update(m3_birthorder_nonlinear, formula = . ~ . - birth_order_nonlinear - sibling_count + count_birth_order)
-summary(m4_interaction)
+tidy(m4_interaction, conf.int = T)
 ```
 
 ###### Coefficient Plot {.active}
