--- a/4_analyses_imputed_data.Rmd
+++ b/4_analyses_imputed_data.Rmd
@@ -9,7 +9,7 @@ editor_options:
 ```{r helper}
 source("0_helpers.R")
 opts_chunk$set(warning = FALSE)
-
+detach("package:lmerTest", unload=TRUE)
 ```
 
 
