--- a/_compare_birthorder_imputed.Rmd
+++ b/_compare_birthorder_imputed.Rmd
@@ -12,7 +12,7 @@ editor_options:
 ```{r}
 ### start with naive birthorder
 data_used <- data_used %>%
-  mutate(sibling_count = sibling_count_naive,
+  mutate(sibling_count = sibling_count_naive_factor,
          birth_order_nonlinear = birthorder_naive_factor,
          birth_order = birthorder_naive,
          count_birth_order = count_birthorder_naive)
@@ -156,7 +156,7 @@ anova(model_naive_m1, model_naive_m2, model_naive_m3, model_naive_m4)
 
 ```{r}
 data_used = data_used %>%
-  mutate(sibling_count = sibling_count_genes,
+  mutate(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
          count_birth_order = count_birthorder_genes)
